# lumimi

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
src/: config.js  dict-ui.js  index.html  license-ui.js  main.js  panel-resizer.js  preset-ui.js  preview.js  resource-ui.js  settings-ui.js  styles.css  video-ui.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/licenses/: DEPENDENCIES_LICENSE_SUMMARY.txt  FFMPEG_SOURCE.txt  LICENSE_851ChikaraYowaku.txt  LICENSE_NikumaruFont.txt  NOTICE_THIRD_PARTY.txt  OFL_NotoSansJP.txt
src-tauri/src/: audio.rs  dict.rs  export.rs  lib.rs  main.rs  render.rs  settings.rs  subtitle.rs  tokenize.rs  transcribe.rs
